@@ -17,6 +17,7 @@
   
 <h2><a name="index">Function Index</a></h2>
 <table width="100%" border="1" cellspacing="0" cellpadding="2" summary="function index"><tr><td valign="top"><a href="#description-0">description/0</a></td><td></td></tr>
+<tr><td valign="top"><a href="#handlerEvent-1">handlerEvent/1</a></td><td></td></tr>
 <tr><td valign="top"><a href="#handlerRpc-1">handlerRpc/1</a></td><td>rpc handler.</td></tr>
 <tr><td valign="top"><a href="#handlerStart-1">handlerStart/1</a></td><td>start handler.</td></tr>
 <tr><td valign="top"><a href="#handlerStop-3">handlerStop/3</a></td><td>stop handler.</td></tr>
@@ -29,6 +30,11 @@
 <h3 class="function"><a name="description-0">description/0</a></h3>
 <div class="spec">
 <p><tt>description() -&gt; any()</tt></p>
+</div>
+
+<h3 class="function"><a name="handlerEvent-1">handlerEvent/1</a></h3>
+<div class="spec">
+<p><tt>handlerEvent(Event) -&gt; any()</tt></p>
 </div>
 
 <h3 class="function"><a name="handlerRpc-1">handlerRpc/1</a></h3>
