@@ -9,7 +9,9 @@
 
 %% Required callback API for all UBF contract implementations.
 -export([info/0, description/0, keepalive/0]).
--export([handlerStart/1, handlerStop/3, handlerRpc/1]).
+-export([handlerStart/1, handlerStop/3, handlerRpc/1, handlerEvent/1]).
+
+-import(ubf_plugin_handler, [sendEvent/2, install_handler/2]).
 
 -compile({parse_transform,contract_parser}).
 -add_contract("ubf_thrift_plugin").
@@ -30,6 +32,7 @@ keepalive() ->
 %%          {accept, Reply::any(), StateName::atom(), StateData::term()} | {reject, Reason::any()}
 %% @doc start handler
 handlerStart(_Args) ->
+    ack = install_handler(self(), fun handlerEvent/1),
     {accept,ok,none,unused}.
 
 %% @spec handlerStop(Pid::pid(), Reason::any(), StateData::term()) -> void()
@@ -55,3 +58,10 @@ handlerRpc(Event)
     ?MODULE:Event();
 handlerRpc(Event) ->
     {Event, not_implemented}.
+
+handlerEvent(Event) ->
+    %% @TODO add your own implementation here
+    %% Let's fake it and echo the request
+    sendEvent(self(), Event),
+    fun handlerEvent/1.
+
